2010-07-02  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: yandex. Thanks to Uspenskiy Andrey.

2010-05-06  Ian Beckwith  <ianb@erislabs.net>

	* uzbl_load_url_from_surfraw: fix menu.
	  Thanks to Sumant Oemrawsingh.
	* Fixed tests: deblists google openbsd.

2010-04-28  Ian Beckwith  <ianb@erislabs.net>

	* configure.in: test for google-chrome, opera and links2.

2010-04-22  Ian Beckwith  <ianb@erislabs.net>

	* debwiki: remove -w, Debian Women wiki is now being merged
	  into main wiki. Thanks to Simone Fittabile.
	* debwiki.test: stop testing -w option.
	* surfraw.IN: change an awk to @AWK@.

2010-04-21  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: jamendo - Search Jamendo: free music with Creative
	  Commons licenses (www.jamendo.com). Thanks to Simone Fittabile.
	* wikipedia, ixquick: Support https. Thanks to Simone Fittabile.
	* wikipedia: tweak Simone's patch to support https for start
	  page and document the SURFRAW_wikipedia_ssl variable.
	* ixquick: add -nossl option.
	* javasun.test: revert to previous test, works again.

2010-04-19  James Rowe  <jnrowe@gmail.com>

	* genpkg: removed, use genportage.

2010-04-16  Ian Beckwith  <ianb@erislabs.net>

	* New elvi:
	  + scroogle: Search Google anonymously via www.scroogle.org.
	  + duckduckgo: Search the web via duckduckgo.com.
	* Fix tests: excite, javasun, musicbrainz, yahoo.

2010-03-03  James Rowe  <jnrowe@gmail.com>

	* bookfinder: fix ISBN search test.

2010-03-01  Ian Beckwith  <ianb@erislabs.net>

	* Removed autotools-generated files from git repo
	  use ./prebuild to regenerate.
	* Lower required automake version to 1.10.
	* prebuild: try and find a sane set of autotools, then call
	  autoreconf -vi
	* Add autotools-generated files to .gitignore
	* Bump version to 2.2.7
	* cnn: fix URL.
	* cnn.test: Disable. Bloody CNN now needs javascript for search,
	  so should be tested manually.
	* W, yahoo: fix tests.
	* Remove unused '-quiet' option.
	* Update AUTHORS.