@@ -105,6 +105,9 @@ Charles Twardy <ctwardy@iet.com>
 Uspenskiy Andrey <duspen@yandex.ua>
         elvi: yandex
 
+Jameson Rollins <jrollins@finestructure.net>
+        elvi: ads
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
