@@ -1,5 +1,6 @@
 elvi.1sr.gz @mandir@/man1/W.1.gz
 elvi.1sr.gz @mandir@/man1/acronym.1sr.gz
+elvi.1sr.gz @mandir@/man1/ads.1sr.gz
 elvi.1sr.gz @mandir@/man1/alioth.1sr.gz
 elvi.1sr.gz @mandir@/man1/altavista.1sr.gz
 elvi.1sr.gz @mandir@/man1/amazon.1sr.gz
