@@ -1,0 +1,4 @@
+ads lightcurve
+The asteroid lightcurve database
+ads keplerian elements
+Equations for the Keplerian Elements: Hidden Symmetry
