@@ -1,3 +1,7 @@
+2010-08-20  James Rowe  <jnrowe@gmail.com>
+
+	* new elvi: ads.  Thanks to Jameson Rollins.
+
 2010-07-02  Ian Beckwith  <ianb@erislabs.net>
 
 	* new elvi: yandex. Thanks to Uspenskiy Andrey.
